--- a/templates/dashboard/dashboard.html.twig
+++ b/templates/dashboard/dashboard.html.twig
@@ -4,6 +4,11 @@
   <i class='fas mr-2 fa-tachometer-alt'></i><strong>{{ 'caption.dashboard'|trans }}</strong>
 {% endblock title %}
 
+{# This 'topsection' gets output _before_ the main form, allowing `dump()`, without breaking Vue #}
+{% block topsection %}
+
+{% endblock %}
+
 {% block main %}
   <div id="listing">
     {% include '@bolt/_partials/_content_listing.html.twig' with {'records': records, 'type': 'dashboard' } %}
