--- a/templates/_partials/_pager.html.twig
+++ b/templates/_partials/_pager.html.twig
@@ -2,7 +2,7 @@
     <div class="pagination">
       {{ pagerfanta(records, {
         routeName: 'bolt_content_overview',
-        routeParams: { 'contenttype': contenttype.slug|default() }
+        routeParams: { 'contentType': contentType.slug|default() }
       }) }}
     </div>
 {% endif %}
