Adding more boilerplate to the kitchensink

--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -2,7 +2,9 @@
 
 {% extends '@bolt/_base/layout.html.twig' %}
 
-{% block title %} {{ 'caption.about_bolt'|trans }} » {{ 'caption.bolt_payoff'|trans }} {% endblock title %}
+{% block title %}
+    {{ 'caption.about_bolt'|trans }} » {{ 'caption.bolt_payoff'|trans }}
+{% endblock title %}
 
 {% block main %}
 
