--- a/templates/content/_fields_aside.html.twig
+++ b/templates/content/_fields_aside.html.twig
@@ -3,7 +3,8 @@
     'name' : 'status',
     'value' : [record.status],
     'options' : record.statusoptions,
-    'form' : 'editcontent'
+    'form' : 'editcontent',
+    'allowempty' : false
 } %}
 
 {% include '@bolt/_partials/fields/date.html.twig' with {
