--- a/templates/content/_taxonomies.html.twig
+++ b/templates/content/_taxonomies.html.twig
@@ -19,6 +19,7 @@
                             :options="{{ options|json_encode() }}"
                             :multiple="{{ definition.multiple ? 'true' : 'false' }}"
                             :taggable="{{ (definition.behaves_like == 'tags') ? 'true' : 'false' }}"
+                            :allowempty={{ definition.allow_empty ? 'true' : 'false' }}
                     ></editor-select>
 
                     {# (Current saved value: <code>{{ value|json_encode() }}</code> ) #}
