Fix field values not being translated while editing content in different language

--- a/templates/content/view_locales.html.twig
+++ b/templates/content/view_locales.html.twig
@@ -52,7 +52,7 @@
             {% for locale in locales %}
                 <td>
                     <a href="{{ path('bolt_content_edit', {'id': record.id, 'locale': locale}) }}" class="btn btn-secondary btn-sm">
-                        {{ 'action.edit'|trans }}
+                        {{ 'general.phrase.edit'|trans }}
                     </a>
                 </td>
 
