--- a/templates/pages/placeholder.html.twig
+++ b/templates/pages/placeholder.html.twig
@@ -24,6 +24,8 @@
                 Omnis enim est natura diligens sui. Duo Reges: constructio interrete.
             </p>
 
+            <h1>Buttons</h1>
+
             {{ macro.button('action.save', 'fa-save', 'primary', 'button', '') }}
             {{ macro.button('action.save', 'fa-save', 'secondary', 'button', '') }}
             {{ macro.button('action.save', 'fa-save', 'tertiary', 'button', '') }}
@@ -41,8 +43,10 @@
 
             <form method="post" id="editor">
 
+            {# a field with _no_ options, all defaults/fallbacks #}
             {% include ['_partials/fields/generic.html.twig'] %}
 
+            {# a field with passed in options #}
             {% include ['_partials/fields/generic.html.twig'] with {
                 'name': 'foo',
                 'id': 'bar',
@@ -50,8 +54,9 @@
                 'placeholder': 'Just a dummy field'
             } %}
 
+            {# fields from a contenttype #}
             {% setcontent record = 'homepage' returnsingle %}
-            {% for key, fielddefinition in record.definition.fields %}
+            {% for key, fielddefinition in record.definition.fields|slice(0,3) %}
 
                 {% set field = record.field(key, 'en', false, fielddefinition) %}
 
