--- a/templates/pages/placeholder.html.twig
+++ b/templates/pages/placeholder.html.twig
@@ -9,22 +9,21 @@
 
 {% block main %}
 
-    <div class="row">
-        <div class="col-md-9">
-            <h1>{{ title }}</h1>
+    <h2>{{ title }}</h2>
 
-            {% if subtitle|default() %}
-                <h3>{{ subtitle }}</h3>
-            {% endif %}
+    {% if subtitle|default() %}
+        <h3>{{ subtitle }}</h3>
+    {% endif %}
 
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Torquatus, is qui consul
-                cum Cn. Tum ille timide vel potius verecunde: Facio, inquit. Quae sequuntur igitur?
-                Sunt enim prima elementa naturae, quibus auctis vírtutis quasi germen efficitur.
-                Omnis enim est natura diligens sui. Duo Reges: constructio interrete.
-            </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Torquatus, is qui consul
+        cum Cn. Tum ille timide vel potius verecunde: Facio, inquit. Quae sequuntur igitur?
+        Sunt enim prima elementa naturae, quibus auctis vírtutis quasi germen efficitur.
+        Omnis enim est natura diligens sui. Duo Reges: constructio interrete.
+    </p>
 
-            <h1>Buttons</h1>
+    <section class="buttons">
+        <h1>Buttons</h1>
 
             {{ macro.button('action.save', 'fa-save', 'primary', 'button', '') }}
             {{ macro.button('action.save', 'fa-save', 'secondary', 'button', '') }}
@@ -37,40 +36,44 @@
             {{ macro.button('action.save', 'fa-save', 'dark', 'button', '') }}
             {{ macro.button('action.save', 'fa-save', 'link', 'button', '') }}
 
-            <hr>
+        <hr>
+    </section>
 
-            <h1>Fields</h1>
 
-            <form method="post" id="editor">
+    <section class="fields">
+        <h1>Fields</h1>
 
-            {# a field with _no_ options, all defaults/fallbacks #}
-            {% include ['_partials/fields/generic.html.twig'] %}
+        <form method="post" id="editor">
 
-            {# a field with passed in options #}
-            {% include ['_partials/fields/generic.html.twig'] with {
-                'name': 'foo',
-                'id': 'bar',
-                'label': 'A Field',
-                'placeholder': 'Just a dummy field'
-            } %}
+        {# a field with _no_ options, all defaults/fallbacks #}
+        {% include ['_partials/fields/generic.html.twig'] %}
 
-            {# fields from a contenttype #}
-            {% setcontent record = 'homepage' returnsingle %}
-            {% for key, fielddefinition in record.definition.fields|slice(0,3) %}
+        {# a field with passed in options #}
+        {% include ['_partials/fields/generic.html.twig'] with {
+            'name': 'foo',
+            'id': 'bar',
+            'value': "FooBar",
+            'label': 'A Field',
+            'placeholder': 'Just a dummy field'
+        } %}
 
-                {% set field = record.field(key, 'en', false, fielddefinition) %}
+        {# fields from a contenttype #}
+        {% setcontent record = 'homepage' returnsingle %}
+        {% for key, fielddefinition in record.definition.fields|slice(0,3) %}
 
-                {% include [
-                    '_partials/fields/' ~ fielddefinition.type ~ '.html.twig',
-                    '_partials/fields/generic.html.twig'
-                    ] with { 'field' : field } %}
+            {% set field = record.field(key, 'en', false, fielddefinition) %}
 
-            {% endfor %}
+            {% include [
+                '_partials/fields/' ~ fielddefinition.type ~ '.html.twig',
+                '_partials/fields/generic.html.twig'
+                ] with { 'field' : field } %}
 
-            {# @todo Add more fields #}
-            </form>
+        {% endfor %}
 
-        </div>
-    </div>
+        {# @todo Add more fields #}
+        </form>
+
+        <hr>
+    </section>
 
 {% endblock main %}
