--- a/templates/_partials/fields/select.html.twig
+++ b/templates/_partials/fields/select.html.twig
@@ -1,9 +1,12 @@
 {% extends '@bolt/_partials/fields/_base.html.twig' %}
 
-{# Check Attributes #}
-{% if form is not defined %}
-    {% set form = '' %}
-{% endif %}
+{# On top of the attributes that get set/defined in `_base.html.twig`,
+   The Select fields has three additional attributes:
+
+     - options: The actual options that are available in the select
+     - multiple: A boolean to set whether or not we allow multiple selections
+     - allowempty: A boolean to set whether or not we allow clearing the selection
+ #}
 
 {% if options is not defined %}
     {% set options = selectoptionsfromarray(field) %}
