--- a/templates/pages/placeholder.html.twig
+++ b/templates/pages/placeholder.html.twig
@@ -46,10 +46,10 @@
         <form method="post" id="editor">
 
         {# a field with _no_ options, all defaults/fallbacks #}
-        {% include ['_partials/fields/generic.html.twig'] %}
+        {% include '_partials/fields/generic.html.twig' %}
 
         {# a field with passed in options #}
-        {% include ['_partials/fields/generic.html.twig'] with {
+        {% include '_partials/fields/generic.html.twig' with {
             'name': 'foo',
             'id': 'bar',
             'value': "FooBar",
