--- a/templates/_partials/fields/_base.html.twig
+++ b/templates/_partials/fields/_base.html.twig
@@ -1,5 +1,25 @@
 {%- spaceless -%}
 
+{# This template fragment is used to "extend" the different fields, used in
+   Bolt's backend. Most of the values get passed in, either through a `Field`,
+   or otherwise through parameters.
+
+   The used variables are: ("P" is parameter, "F" comes from a `Field`)
+
+   - type: P - The type of the field
+   - variant: F - the "variant" of the field, if applicable
+   - name: P+F - The `name` attribute of the <input> field
+   - id: P+F - The `id` attribut of the <input> field
+   - class: P+F - The `class` attribute of the <input> field
+   - form: P - The `form` attribute of the <input>, defaults to 'editcontent'
+   - value: P+F - The default value if the <input> field
+   - label: P+F - Label used as visible anchor to the <input> field
+   - placeholder: P+F - Placeholder text to use in the <input>
+   - prefix: P+F - Short text to display as a prefix before a field
+   - postfix: P+F - Short text to display as a postfix after a field
+
+   #}
+
 {# Set type #}
 {% set type = field.type|default %}
 
