--- a/templates/content/edit.html.twig
+++ b/templates/content/edit.html.twig
@@ -40,7 +40,7 @@
 
         </div>
 
-        {{ macro.button('action.save', 'fa-save', 'success') }}
+        {% include '@bolt/content/_buttons.html.twig' %}
 
     </form>
 
@@ -53,7 +53,7 @@
 
             <div class="card mb-3">
               <div class="card-body">
-                  {{ macro.button('action.save', 'fa-save', 'success', 'submit', 'editcontent') }}
+                  {% include '@bolt/content/_buttons.html.twig' %}
               </div>
             </div>
 
