--- a/templates/content/_buttons.html.twig
+++ b/templates/content/_buttons.html.twig
@@ -1,15 +1,18 @@
 {% import '@bolt/_macro/_macro.html.twig' as macro %}
 
+<div class="btn-group">
 {{ macro.button('action.save', 'fa-save', 'success', 'submit', 'editcontent') }}
 
 {% if record.id %}
-<div class="btn-group">
+    &nbsp;
+
     <button type="submit" class="btn btn-secondary mb-3" form="editcontent"
             formaction="{{ path('bolt_content_edit_preview', {'id': record.id }) }}" formtarget="_blank">
         <i class="fas fa-external-link-square-alt mr-2"></i>
         {{ 'action.preview'|trans }}
     </button>
 
+    {% if record.status == "published" %}
     <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split mb-3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <span class="sr-only">Toggle Dropdown</span>
     </button>
@@ -18,5 +21,6 @@
         <i class="fas fa-external-link-square-alt mr-2 ml-2"></i>
         {{ 'action.view_saved'|trans }}
     </button>
+    {% endif %}
 </div>
 {% endif %}
