Working on About page.

--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -39,11 +39,21 @@
     <ul>
         <li>The awesome <a href="https://symfony.com/4">Symfony 4, PHP framework</a> and a lot of the
             <a href="http://symfony.com/">Symfony components</a>.</li>
-        <li>The <a href="http://www.doctrine-project.org">Doctrine DBAL</a> for database access and abstraction.</li>
+        <li>The <a href="http://www.doctrine-project.org">Doctrine ORM and DBAL</a> for database access, abstraction and object mapping.</li>
         <li><a href="http://twig.sensiolabs.org/">Twig, flexible, fast, and secure template engine</a>.</li>
         <li><a href="http://twitter.github.com/bootstrap">Bootstrap 4</a> and
             <a href="http://fortawesome.github.com/Font-Awesome/">Font Awesome</a></li>
-        <li><a href="http://ckeditor.com/">CKEditor</a> for the clean HTML5 Wysywig editor areas.</li>
+    </ul>
+
+    <ul>
+        <li><a href="">Vue</a> and VueX</li>
+        <li><a href="">CodeMirror</a>.</li>
+        <li><a href="">Webpack</a> and Symfony Encore.</li>
+
+
+        {# @todo: Once we settle on a Wysiwyg component (like CKeditor), add it here. #}
+        {# @todo: Once we settle on a Markdown component (like MDE or ToastUI), add it here. #}
+
     </ul>
 
 {% endblock main %}
