Implement the basics of the Embed field (Vue)
The `|e('js')` is needed when there's HTML or quotes in the value.
Otherwise, this will break the whole application (blank admin
area).

--- a/templates/_partials/fields/embed.html.twig
+++ b/templates/_partials/fields/embed.html.twig
@@ -2,13 +2,14 @@
 
 {% block field %}
     <editor-embed
+        :embedapi="'{{ path('bolt_embed') }}'"
         :name="'{{ name }}'"
         :url="'{{ field.get('url') }}'"
         :width="'{{ field.get('width') }}'"
         :height="'{{ field.get('height') }}'"
-        :title="'{{ field.get('title') }}'"
-        :authorname="'{{ field.get('authorname') }}'"
-        :author_url="'{{ field.get('author_url') }}'"
+        :title="'{{ field.get('title')|e('js') }}'"
+        :authorname="'{{ field.get('authorname')|e('js') }}'"
+        :authorurl="'{{ field.get('authorurl') }}'"
         :html="'{{ field.get('html') }}'"
         :thumbnail="'{{ field.get('thumbnail') }}'"
     ></editor-embed>
