--- a/templates/bundles/TranslationBundle/WebUI/base.html.twig
+++ b/templates/bundles/TranslationBundle/WebUI/base.html.twig
@@ -8,6 +8,13 @@
 
 {% block main %}
 
+{% if not app.request.get('configName') %}
+    <p>These are the translations used in Bolt. We rely on the community to expand on new
+        translations, and keep them up to date. If you wish to participate, read the
+        <a href="https://github.com/bolt/four/wiki/Contribute-on-translations">instructions here</a>.
+    </p>
+{% endif %}
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
         <ul class="navbar-nav mr-auto">
