Consistently use the '@bolt' namespace in templates

--- a/templates/_base/layout.html.twig
+++ b/templates/_base/layout.html.twig
@@ -77,7 +77,7 @@
                     {% endblock %}
                 </aside>
                 <div class="admin__notifications">
-                    {{ include('_partials/_flash_messages.html.twig') }}
+                    {{ include('@bolt/_partials/_flash_messages.html.twig') }}
                 </div>
             </div>
         </div>
