--- a/templates/_partials/fields/_base.html.twig
+++ b/templates/_partials/fields/_base.html.twig
@@ -87,7 +87,7 @@
 
 {{ prefix|raw }}
 {% block label %}
-    {% include '_partials/fields/_label.html.twig' %}
+    {% include '@bolt/_partials/fields/_label.html.twig' %}
 {% endblock %}
 {% block field %}
 
