--- a/assets/scss/modules/editor/_tabbar.scss
+++ b/assets/scss/modules/editor/_tabbar.scss
@@ -7,6 +7,10 @@
   .nav-item {
     color: var(--shade);
     position: relative;
+  }
+
+  .nav-link {
+    padding: $spacer / 2 $spacer / 1.5;
 
     &::after {
       transition: $transition-base;
@@ -30,8 +34,7 @@
       font-weight: $font-weight-semibold;
     }
 
-    &.active,
-    &.show {
+    &.active {
       &::after {
         transform: scaleX(1);
       }
@@ -41,9 +44,5 @@
         color: var(--primary);
       }
     }
-  }
-
-  .nav-link {
-    padding: $spacer / 2 $spacer / 1.5;
   }
 }
