--- a/templates/content/_tabs.html.twig
+++ b/templates/content/_tabs.html.twig
@@ -2,7 +2,7 @@
     <ul class="nav editor__tabbar" role="tablist">
         {% for group in groups %}
             <li class="nav-item">
-                <a class="nav-item nav-link {% if loop.first %}active{% endif %}" id="{{group|slug}}-tab" data-toggle="pill" href="#{{group|slug}}" role="tab" aria-controls="{{group|slug}}" aria-selected="{% if loop.first %}true{%else%}false{% endif %}">
+                <a class="nav-link {% if loop.first %}active{% endif %}" id="{{group|slug}}-tab" data-toggle="pill" href="#{{group|slug}}" role="tab" aria-controls="{{group|slug}}" aria-selected="{% if loop.first %}true{%else%}false{% endif %}">
                     <span>{{group|capitalize}}</span></a>
             </li>
         {% endfor %}
