--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -15,6 +15,11 @@
         developers and content-editors. Bolt is Open Source, and as such it uses other Open Source
         components. If you are a developer you're very welcome to help in the further development of Bolt.
     </p>
+    <p>The ongoing Bolt development is spearheaded by:</p>
+    <ul>
+        <li><a href="https://twokings.nl/">Two Kings</a> &ndash; Artisinal Web Development</li>
+        <li><a href="https://tsh.io/">The Software House</a> &ndash; Web and Mobile Development</li>
+    </ul>
     <p>
         All parts of Bolt are free to use under the open-source MIT license. The full licensing text can be
         found here, in the included <a href="https://docs.bolt.cm/other/license">LICENSE.md</a>.
@@ -27,7 +32,7 @@
         <a href="https://docs.bolt.cm" class="btn btn-secondary" target="_blank">
             <i class="fa fa-book"></i> {{ 'about.bolt_documentation'|trans }}
         </a>
-        <a href="https://github.com/bolt/docs" class="btn btn-secondary" target="_blank">
+        <a href="https://github.com/bolt" class="btn btn-secondary" target="_blank">
             <i class="fab fa-github-alt"></i> {{ 'about.bolt_on_github'|trans }}
         </a>
     </p>
@@ -37,23 +42,18 @@
     <p>{{ 'about.list_of_used_libraries'|trans }}{#  #}</p>
 
     <ul>
-        <li>The awesome <a href="https://symfony.com/4">Symfony 4, PHP framework</a> and a lot of the
-            <a href="http://symfony.com/">Symfony components</a>.</li>
-        <li>The <a href="http://www.doctrine-project.org">Doctrine ORM and DBAL</a> for database access, abstraction and object mapping.</li>
-        <li><a href="http://twig.sensiolabs.org/">Twig, flexible, fast, and secure template engine</a>.</li>
-        <li><a href="http://twitter.github.com/bootstrap">Bootstrap 4</a> and
-            <a href="http://fortawesome.github.com/Font-Awesome/">Font Awesome</a></li>
-    </ul>
-
-    <ul>
-        <li><a href="">Vue</a> and VueX</li>
-        <li><a href="">CodeMirror</a>.</li>
-        <li><a href="">Webpack</a> and Symfony Encore.</li>
-
-
+        <li>The awesome <a href="https://symfony.com/">Symfony 4, PHP framework</a> and a lot of the
+            <a href="https://symfony.com/">Symfony components</a>.</li>
+        <li>The <a href="https://www.doctrine-project.org">Doctrine ORM and DBAL</a> for database access, abstraction and object mapping.</li>
+        <li><a href="https://twig.sensiolabs.org/">Twig, flexible, fast, and secure template engine</a>.</li>
+        <li><a href="https://getbootstrap.com/">Bootstrap 4</a> and
+            <a href="https://fontawesome.com/">Font Awesome</a></li>
+        <li><a href="https://vuejs.org/">Vue</a> and VueX</li>
+        <li><a href="https://codemirror.net/">CodeMirror</a>.</li>
+        <li><a href="https://webpack.js.org/">Webpack</a> and
+            <a href="https://symfony.com/doc/current/frontend/encore/installation.html">Symfony Encore</a>.</li>
         {# @todo: Once we settle on a Wysiwyg component (like CKeditor), add it here. #}
         {# @todo: Once we settle on a Markdown component (like MDE or ToastUI), add it here. #}
-
     </ul>
 
 {% endblock main %}
