--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -15,10 +15,10 @@
         developers and content-editors. Bolt is Open Source, and as such it uses other Open Source
         components. If you are a developer you're very welcome to help in the further development of Bolt.
     </p>
-    <p>The ongoing Bolt development is spearheaded by:</p>
+    <p>The ongoing Bolt development takes place under the care of:</p>
     <ul>
-        <li><a href="https://twokings.nl/">Two Kings</a> &ndash; Artisinal Web Development</li>
-        <li><a href="https://tsh.io/">The Software House</a> &ndash; Web and Mobile Development</li>
+        <li><a href="https://twokings.nl/">Two Kings</a> &ndash; Artisinal Web Development.</li>
+        <li><a href="https://tsh.io/">The Software House</a> &ndash; Web and Mobile Development.</li>
     </ul>
     <p>
         All parts of Bolt are free to use under the open-source MIT license. The full licensing text can be
@@ -44,14 +44,22 @@
     <ul>
         <li>The awesome <a href="https://symfony.com/">Symfony 4, PHP framework</a> and a lot of the
             <a href="https://symfony.com/">Symfony components</a>.</li>
-        <li>The <a href="https://www.doctrine-project.org">Doctrine ORM and DBAL</a> for database access, abstraction and object mapping.</li>
-        <li><a href="https://twig.sensiolabs.org/">Twig, flexible, fast, and secure template engine</a>.</li>
+        <li>The <a href="https://www.doctrine-project.org">Doctrine</a> for database access, abstraction and object mapping.</li>
+        <li><a href="https://twig.sensiolabs.org/">Twig</a> - flexible, fast, and secure template engine</a>.</li>
         <li><a href="https://getbootstrap.com/">Bootstrap 4</a> and
-            <a href="https://fontawesome.com/">Font Awesome</a></li>
-        <li><a href="https://vuejs.org/">Vue</a> and VueX</li>
+            <a href="https://fontawesome.com/">Font Awesome</a>.</li>
+        <li><a href="https://vuejs.org/">Vue</a> and VueX.</li>
         <li><a href="https://codemirror.net/">CodeMirror</a>.</li>
         <li><a href="https://webpack.js.org/">Webpack</a> and
             <a href="https://symfony.com/doc/current/frontend/encore/installation.html">Symfony Encore</a>.</li>
+        <li><a href="https://api-platform.com/">API Platform</a>.</li>
+        <li><a href="https://phpunit.de/">PHPUnit</a>.</li>
+        <li><a href="http://www.phpspec.net/en/stable/">phpspec</a>.</li>
+        <li><a href="http://behat.org/en/latest/">Behat</a>.</li>
+        <li><a href="https://github.com/coduo/php-matcher">PHP Matcher</a>.</li>
+        <li><a href="https://kakunin.io">Kakunin</a>.</li>
+        <li><a href="https://github.com/phpstan/phpstan">PHP Stan</a>.</li>
+        <li><a href="https://github.com/Symplify/EasyCodingStandard">Easy Coding Standard</a>.</li>
         {# @todo: Once we settle on a Wysiwyg component (like CKeditor), add it here. #}
         {# @todo: Once we settle on a Markdown component (like MDE or ToastUI), add it here. #}
     </ul>
