Update "About" page
- add Blackfire
- set target blank on all links

--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -17,8 +17,8 @@
     </p>
     <p>The ongoing Bolt development takes place under the care of:</p>
     <ul>
-        <li><a href="https://twokings.nl/">Two Kings</a> &ndash; Artisinal Web Development.</li>
-        <li><a href="https://tsh.io/">The Software House</a> &ndash; Web and Mobile Development.</li>
+        <li><a href="https://twokings.nl/" target="_blank">Two Kings</a> &ndash; Artisinal Web Development.</li>
+        <li><a href="https://tsh.io/" target="_blank">The Software House</a> &ndash; Web and Mobile Development.</li>
     </ul>
     <p>
         All parts of Bolt are free to use under the open-source MIT license. The full licensing text can be
@@ -42,24 +42,25 @@
     <p>{{ 'about.list_of_used_libraries'|trans }}{#  #}</p>
 
     <ul>
-        <li>The awesome <a href="https://symfony.com/">Symfony 4, PHP framework</a> and a lot of the
-            <a href="https://symfony.com/">Symfony components</a>.</li>
-        <li>The <a href="https://www.doctrine-project.org">Doctrine</a> for database access, abstraction and object mapping.</li>
-        <li><a href="https://twig.sensiolabs.org/">Twig</a> - flexible, fast, and secure template engine</a>.</li>
-        <li><a href="https://getbootstrap.com/">Bootstrap 4</a> and
-            <a href="https://fontawesome.com/">Font Awesome</a>.</li>
-        <li><a href="https://vuejs.org/">Vue</a> and VueX.</li>
-        <li><a href="https://codemirror.net/">CodeMirror</a>.</li>
-        <li><a href="https://webpack.js.org/">Webpack</a> and
-            <a href="https://symfony.com/doc/current/frontend/encore/installation.html">Symfony Encore</a>.</li>
-        <li><a href="https://api-platform.com/">API Platform</a>.</li>
-        <li><a href="https://phpunit.de/">PHPUnit</a>.</li>
-        <li><a href="http://www.phpspec.net/en/stable/">phpspec</a>.</li>
-        <li><a href="http://behat.org/en/latest/">Behat</a>.</li>
-        <li><a href="https://github.com/coduo/php-matcher">PHP Matcher</a>.</li>
-        <li><a href="https://kakunin.io">Kakunin</a>.</li>
-        <li><a href="https://github.com/phpstan/phpstan">PHP Stan</a>.</li>
-        <li><a href="https://github.com/Symplify/EasyCodingStandard">Easy Coding Standard</a>.</li>
+        <li>The awesome <a href="https://symfony.com/" target="_blank">Symfony 4, PHP framework</a> and a lot of the
+            <a href="https://symfony.com/components" target="_blank">Symfony components</a>.</li>
+        <li>The <a href="https://www.doctrine-project.org" target="_blank">Doctrine</a> for database access, abstraction and object mapping.</li>
+        <li><a href="https://twig.sensiolabs.org/" target="_blank">Twig</a> - flexible, fast, and secure template engine</a>.</li>
+        <li><a href="https://getbootstrap.com/" target="_blank">Bootstrap 4</a> and
+            <a href="https://fontawesome.com/" target="_blank">Font Awesome</a>.</li>
+        <li><a href="https://vuejs.org/" target="_blank">Vue</a> and VueX.</li>
+        <li><a href="https://codemirror.net/" target="_blank">CodeMirror</a>.</li>
+        <li><a href="https://webpack.js.org/" target="_blank">Webpack</a> and
+            <a href="https://symfony.com/doc/current/frontend/encore/installation.html" target="_blank">Symfony Encore</a>.</li>
+        <li><a href="https://api-platform.com/" target="_blank">API Platform</a>.</li>
+        <li><a href="https://phpunit.de/" target="_blank">PHPUnit</a>.</li>
+        <li><a href="http://www.phpspec.net/en/stable/" target="_blank">phpspec</a>.</li>
+        <li><a href="http://behat.org/en/latest/" target="_blank">Behat</a>.</li>
+        <li><a href="https://github.com/coduo/php-matcher" target="_blank">PHP Matcher</a>.</li>
+        <li><a href="https://kakunin.io" target="_blank">Kakunin</a>.</li>
+        <li><a href="https://github.com/phpstan/phpstan" target="_blank">PHP Stan</a>.</li>
+        <li><a href="https://github.com/Symplify/EasyCodingStandard" target="_blank">Easy Coding Standard</a>.</li>
+        <li><a href="https://blackfire.io/" target="_blank">Blackfire</a>.</li>
         {# @todo: Once we settle on a Wysiwyg component (like CKeditor), add it here. #}
         {# @todo: Once we settle on a Markdown component (like MDE or ToastUI), add it here. #}
     </ul>
