--- a/templates/content/view_locales.html.twig
+++ b/templates/content/view_locales.html.twig
@@ -10,7 +10,7 @@
     {{ 'caption.edit'|trans }}
     {{ record.definition.singular_name }}
     »
-    <strong>{{ record.title|excerpt(50)|default('New') }}</strong>
+    <strong>{{ excerpt(record | title, 50) | default('New') }}</strong>
 {% endblock %}
 
 {#{% block vue_id 'editor' %}#}
