--- a/templates/_partials/_content_listing.html.twig
+++ b/templates/_partials/_content_listing.html.twig
@@ -2,7 +2,8 @@
     <!-- listing records -->
     <listing-records
       type="{{ type }}"
-      :data="{{ records|json_encode }}"
+      {# tricky part: https://github.com/whiteoctober/WhiteOctoberPagerfantaBundle/issues/165#issuecomment-462777227 #}
+      :data="{{ records | merge([]) | json_encode }}"
     >
     </listing-records>
     <!-- end listing records -->
